--- a/web/index.html
+++ b/web/index.html
@@ -26,17 +26,21 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="dst_helper">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <!-- <link rel="apple-touch-icon" href="icons/Icon-192.png"> -->
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>DST Helper</title>
-  <link rel="manifest" href="manifest.json">
 
+  <!-- For bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <link rel="preload" href="main.dart.js" as="script">
+  <link rel="preload" href="assets/FontManifest.json" as="fetch">
+  <link rel="preload" href="assets/AssetManifest.bin.json" as="fetch">
 </head>
 
 <body>
